--- a/environment.yml
+++ b/environment.yml
@@ -5,10 +5,12 @@ channels:
   - defaults
 
 dependencies:
-  - jupyterlab=1.1
-  - matplotlib=3.1
-  - pandas=0.25
-  - pyarrow=0.14
-  - python=3.7
-  - scikit-learn=0.21
-  - xlrd=1.2
+  - python=3.8
+  - pyomo=5.7
+  - pandas
+  - matplotlib
+  - xlrd
+  - XlsxWriter
+  - xlwt
+  - Tornado
+  - cloudpickle
