--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 data/
-env/
+ose-env/
 *.gpr
 *.~gm
 *.lxi
@@ -7,7 +7,11 @@ env/
 *.log 
 task*
 *.gdx
-gams.dat
+*.xlsx
+*.csv
+*.dat
+._.DS_Store
+/tmp/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
