--- a/config/model_config.yml
+++ b/config/model_config.yml
@@ -12,11 +12,9 @@ FilePaths:
     OWN: './data/data-sheet-ownuse.xlsx'
     PIP: './data/data-sheet-pipeline transport.xlsx'
     NON: './data/data-sheet-nonspecified.xlsx'
-    #XXX: './data/data-sheet-xxx.xlsx' # always use with a demand sector
 
 ### Transformation and supply sectors:
     POW: './data/data-sheet-power.xlsx'
     REF: './data/data-sheet-refining.xlsx'
-    #BIO: './data/data-sheet-biorefining.xlsx'
     SUP: './data/data-sheet-supply.xlsx'
-    YYY: './data/data-sheet-yyy.xlsx' #always use with a transformation and/or supply sector
+    YYY: './data/data-sheet-yyy.xlsx'
