--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,9 @@ author-email = david.m.wogan@gmail.com
 license = mit
 long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/asia-pacific-energy-research-centre/aperc-osemosys
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://aperc-osemosys.readthedocs.io/en/latest/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
