--- a/src/aperc_osemosys/model_config.yml
+++ b/src/aperc_osemosys/model_config.yml
@@ -7,7 +7,8 @@ PIP: './data/data-sheet-pipeline transport.xlsx'
 TRN: './data/data-sheet-transport.xlsx'
 XXX: './data/data-sheet-xxx.xlsx'
 #
-H2: './data/data-sheet-hydrogen.xlsx'
+DEM: './data/my-demands.xlsx'
+HYD: './data/data-sheet-hydrogen.xlsx'
 POW: './data/data-sheet-power.xlsx'
 REF: './data/data-sheet-refining.xlsx'
 SUP: './data/data-sheet-supply.xlsx'
