added xxx data for demand sectors

--- a/src/aperc_osemosys/model_config.yml
+++ b/src/aperc_osemosys/model_config.yml
@@ -10,4 +10,5 @@ HYD: './data/data-sheet-hydrogen.xlsx'
 POW: './data/data-sheet-power.xlsx'
 REF: './data/data-sheet-refining.xlsx'
 SUP: './data/data-sheet-supply.xlsx'
+XXX: './data/data-sheet-xxx.xlsx'
 YYY: './data/data-sheet-yyy.xlsx'
