--- a/src/aperc_osemosys/model_config.yml
+++ b/src/aperc_osemosys/model_config.yml
@@ -12,3 +12,4 @@ REF: './data/data-sheet-refining.xlsx'
 SUP: './data/data-sheet-supply.xlsx'
 XXX: './data/data-sheet-xxx.xlsx'
 YYY: './data/data-sheet-yyy.xlsx'
+EM: './data/data-sheet-emissions.xlsx'
