--- a/src/aperc_osemosys/model_config.yml
+++ b/src/aperc_osemosys/model_config.yml
@@ -5,7 +5,7 @@ NON: './data/data-sheet-nonspecified.xlsx'
 OWN: './data/data-sheet-ownuse.xlsx'
 PIP: './data/data-sheet-pipeline transport.xlsx'
 TRN: './data/data-sheet-transport.xlsx'
-DEM: './data/my-demands.xlsx'
+BNK: './data/data-sheet-bunkers.xlsx'
 HYD: './data/data-sheet-hydrogen.xlsx'
 POW: './data/data-sheet-power.xlsx'
 REF: './data/data-sheet-refining.xlsx'
