--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,8 @@ setup_requires = pyscaffold>=3.2a0,<3.3a0
 # install_requires = numpy; scipy
 install_requires = 
     otoole==0.10.1b3
-    colorama--0.4.4
+    colorama==0.4.4
+    pyfiglet
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
